令和5年 午後1 問3の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -997,6 +997,26 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_MU_MIMO">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#MU_MIMO"
+              aria-expanded="false"
+              aria-controls="MU_MIMO"
+            >
+              MU-MIMO(Multi User - Multiple-Input and Mutiple-Output)
+            </button>
+          </h2>
+          <div id="MU_MIMO" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              複数の端末と同時に通信できる無線LANの技術のこと。ネットワークのスループットを向上させ、通信速度の高速化とネットワークの混雑の軽減を実現する。
+              送信側の機器と受信側の機器のそれぞれで複数のアンテナを用いて複数のストリームを生成し、複数の端末での同時通信を可能とする。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_NICチーミング">
           <h2 class="accordion-header">
             <button
@@ -1211,6 +1231,26 @@
               まず空のディストリビューションツリーを作成し、そのツリーに明示的にJoin
               Request(参加要求)があった場合のみそのルータをツリーに追加する。ツリーの中心にはRP(ランデブーポイント)と呼ばれる
               ルータが存在しマルチキャストのトラフィックを受信したいReceiverが接続されているルータはRPにその情報が登録される。
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="h_PoE">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#PoE"
+              aria-expanded="false"
+              aria-controls="PoE"
+            >
+              PoE(Power over Ethernet)
+            </button>
+          </h2>
+          <div id="PoE" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              イーサネットのUTPケーブルを使用して給電する仕組みのこと。IEEE802.3atはPoE+と呼ばれ、最大30Wの電力を供給できる。IEEE802.3btは
+              PoE++と呼ばれ最大90Wの電力を供給できる。
             </div>
           </div>
         </div>
@@ -1857,6 +1897,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_スタック">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#スタック"
+              aria-expanded="false"
+              aria-controls="スタック"
+            >
+              スタック
+            </button>
+          </h2>
+          <div id="スタック" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              複数のスイッチ(L2SW、L3SW)を仮想的に1つのスイッチとして扱う仕組みのこと。論理的に1台のスイッチとして扱うことができるようになるため設計が容易になる。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_ストリーム">
           <h2 class="accordion-header">
             <button
@@ -1906,6 +1965,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_チャネルボンディング">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#チャネルボンディング"
+              aria-expanded="false"
+              aria-controls="チャネルボンディング"
+            >
+              チャネルボンディング
+            </button>
+          </h2>
+          <div id="チャネルボンディング" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              複数のチャネルを束ねて1つの通信に使うことでスループットを向上させる技術のこと。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_ディストリビューションツリー">
           <h2 class="accordion-header">
             <button
@@ -1925,6 +2003,26 @@
           >
             <div class="accordion-body">
               マルチキャスト通信において、マルチキャストグループのメンバーが参加、離脱することから動的に形成される。複数のパケットの転送先にパケットがコピーされ、枝分かれしてツリー状に形成される。
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="h_トライバンド">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#トライバンド"
+              aria-expanded="false"
+              aria-controls="トライバンド"
+            >
+              トライバンド
+            </button>
+          </h2>
+          <div id="トライバンド" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              Wi-Fi6で利用できる5GHz帯を2つに区別し、2.4GHz帯と合わせて計3つの周波数帯を同時に利用できる技術。<br />
+              トライバンドに対応したAPでは5GHzを「W52/W53」と「W56」に分けて使用できる。
             </div>
           </div>
         </div>
@@ -2088,6 +2186,29 @@
             <div class="accordion-body">
               M/M/1の待ち行列モデルにおいて待ち行列に並んでからサービスを受け終わるまでに要する平均時間は次の式で計算する。
               (利用率 / (1 - 利用率)) × 平均サービス時間 + 平均サービス時間
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="h_マルチギガビットイーサネット">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#マルチギガビットイーサネット"
+              aria-expanded="false"
+              aria-controls="マルチギガビットイーサネット"
+            >
+              マルチギガビットイーサネット
+            </button>
+          </h2>
+          <div
+            id="マルチギガビットイーサネット"
+            class="accordion-collapse collapse"
+          >
+            <div class="accordion-body">
+              通信速度が2.5Gbpsまたは5Gbpsで有線LAN(Local Area
+              Network)に接続できる仕組みのこと。IEEE802.3bzで2.5GBASE-T、5GBASE-Tとして規格化されている。
             </div>
           </div>
         </div>
