令和5年 午後2 問2の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -1770,6 +1770,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_X_Forwarded_For">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#X_Forwarded_For"
+              aria-expanded="false"
+              aria-controls="X_Forwarded_For"
+            >
+              X-Forwarded-For
+            </button>
+          </h2>
+          <div id="X_Forwarded_For" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              プロキシサーバが中継するクライアントについてアクセス元のIPアドレスを特定するために使用されるフィールド。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_ZigBee">
           <h2 class="accordion-header">
             <button
