令和4年 午後1 問1の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -1609,6 +1609,27 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_Syslog">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#Syslog"
+              aria-expanded="false"
+              aria-controls="Syslog"
+            >
+              Syslog
+            </button>
+          </h2>
+          <div id="Syslog" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              ログデータの転送に使用される標準規格(RFC5424)のプロトコルで、IPネットワークでログをやりとりするために利用される。
+              RFC5424 - The Syslog
+              Protocolはイベント通知メッセージの伝達に使用されるSyslogプロトコルの規格。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_SysML">
           <h2 class="accordion-header">
             <button
@@ -2015,6 +2036,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_ダイジェスト認証">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#ダイジェスト認証"
+              aria-expanded="false"
+              aria-controls="ダイジェスト認証"
+            >
+              ダイジェスト認証
+            </button>
+          </h2>
+          <div id="ダイジェスト認証" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              パスワードをMD5やSHA-256でハッシュ化することで盗聴を防ぐことができる認証方式。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_チャネルボンディング">
           <h2 class="accordion-header">
             <button
@@ -2178,6 +2218,26 @@
           <div id="フラッディング" class="accordion-collapse collapse">
             <div class="accordion-body">
               マルチキャストフレームにおいて同一セグメント上の受信インターフェース以外のすべてのインターフェースにフレームを転送する動作のこと。
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="h_プロミスキャスモード">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#プロミスキャスモード"
+              aria-expanded="false"
+              aria-controls="プロミスキャスモード"
+            >
+              プロミスキャスモード
+            </button>
+          </h2>
+          <div id="プロミスキャスモード" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              ネットワークカードの動作モードの1つで同一セグメント内のネットワーク上を流れるすべてのデータを受信するモード。通常ネットワークカードは受信したフレームの宛先を調べ
+              自身宛のフレームのみ受信するが、プロミスキャスモードに設定することで他社宛のフレームも含めて全てのフレームを受信できる。
             </div>
           </div>
         </div>
