令和4年 午後1 問2の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -1729,6 +1729,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_VRF">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#VRF"
+              aria-expanded="false"
+              aria-controls="VRF"
+            >
+              VRF(Virtual Routing and Forwarding)
+            </button>
+          </h2>
+          <div id="VRF" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              1つのルータ上で独立した複数のルーティングテーブルを保持できる技術。1台のルータでインスタンスごとにルーティングテーブルを保持できる。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_WebSocket">
           <h2 class="accordion-header">
             <button
