令和4年 午後1 問3の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -2240,6 +2240,26 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_プロキシ例外リスト">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#プロキシ例外リスト"
+              aria-expanded="false"
+              aria-controls="プロキシ例外リスト"
+            >
+              プロキシ例外リスト
+            </button>
+          </h2>
+          <div id="プロキシ例外リスト" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              PCのプロキシ設定で行う設定で、プロキシサーバを経由しない通信のFQDNを登録するリスト。プロキシ例外リストに登録することでプロキシサーバを経由せず
+              直接通信を行うことが可能となる。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_プロミスキャスモード">
           <h2 class="accordion-header">
             <button
