用語の記載ミスを修正

--- a/html/terms.html
+++ b/html/terms.html
@@ -763,7 +763,7 @@
           </h2>
           <div id="IGMPスヌーピング" class="accordion-collapse collapse">
             <div class="accordion-body">
-              レシーバから送信されるパケットをすヌーピング(盗み見)することによってどのスイッチの先にどのマルチキャストグループのメンバーが存在するかを認識することができる機能。不要なインターフェースへの
+              レシーバから送信されるパケットをスヌーピング(盗み見)することによってどのスイッチの先にどのマルチキャストグループのメンバーが存在するかを認識することができる機能。不要なインターフェースへの
               転送を防ぐことで負荷を軽減することができる。
             </div>
           </div>
